--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,34 +1,47 @@
-<div class="login-container">
-  <mat-card>
-    <mat-card-header>
-      <mat-card-title>Login</mat-card-title>
-    </mat-card-header>
-    <mat-card-content>
-      <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-        <mat-form-field appearance="fill">
-          <mat-label>Email</mat-label>
-          <input matInput placeholder="Enter your email" formControlName="email" />
-          <mat-error *ngIf="loginForm.get('email')?.touched && loginForm.get('email')?.invalid">
-            Please enter a valid email address
-          </mat-error>
-        </mat-form-field>
+<div class="sign-in-area">
+  <div class="sign-in-form-container">
+    <mat-card>
+      <div class="title">
+        <h3>Sign In</h3>
+        <p>
+          Don’t have an account yet? <a routerLink="/register" class="sign-up-link">Sign Up</a>
+        </p>
+      </div>
+      <mat-card-content>
+        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+          <div class="form-group">
+            <label for="email" class="input-label">Email Address</label>
+            <mat-form-field appearance="outline" class="full-width">
+              <mat-label>Email Address</mat-label>
+              <input id="email" matInput placeholder="Enter email address" formControlName="email" />
+              <mat-error *ngIf="loginForm.get('email')?.touched && loginForm.get('email')?.invalid">
+                Please enter a valid email address
+              </mat-error>
+            </mat-form-field>
+          </div>
 
-        <mat-form-field appearance="fill">
-          <mat-label>Password</mat-label>
-          <input matInput [type]="hide ? 'password' : 'text'" placeholder="Enter your password" formControlName="password" />
-          <button mat-icon-button matSuffix (click)="hide = !hide" type="button">
-            <mat-icon>{{ hide ? 'visibility_off' : 'visibility' }}</mat-icon>
-          </button>
-          <mat-error *ngIf="loginForm.get('password')?.touched && loginForm.get('password')?.invalid">
-            Password is required
-          </mat-error>
-        </mat-form-field>
+          <div class="form-group">
+            <label for="password" class="input-label">Your Password</label>
+            <mat-form-field appearance="outline" class="full-width">
+              <mat-label>Password</mat-label>
+              <input id="password" matInput [type]="hide ? 'password' : 'text'" placeholder="Enter your password" formControlName="password" />
+              <button mat-icon-button matSuffix (click)="hide = !hide" type="button">
+                <mat-icon>{{ hide ? 'visibility_off' : 'visibility' }}</mat-icon>
+              </button>
+              <mat-error *ngIf="loginForm.get('password')?.touched && loginForm.get('password')?.invalid">
+                Password is required
+              </mat-error>
+            </mat-form-field>
+          </div>
 
-        <div class="login-actions">
-          <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid">Login</button>
-          <button mat-raised-button color="accent" (click)="goToRegister()">Register</button>
-        </div>
-      </form>
-    </mat-card-content>
-  </mat-card>
+          <div class="login-info">
+            <mat-checkbox>Remember me</mat-checkbox>
+            <a routerLink="/forgot-password" class="forgot-password-link">Forgot Password?</a>
+          </div>
+
+          <button mat-raised-button class="submit-btn" type="submit" [disabled]="loginForm.invalid">Sign In</button>
+        </form>
+      </mat-card-content>
+    </mat-card>
+  </div>
 </div>
